--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "default-dark-ui",
-  "version": "3.0.0",
+  "name": "tokyo-night-dark-ui",
+  "version": "0.9.4",
   "theme": "ui",
   "themeAppearance": "dark",
-  "description": "Default Dark UI Theme for Inkdrop",
+  "description": "Tokyo Night Dark UI theme",
   "styleSheets": [
     "theme.css"
   ],
@@ -14,12 +14,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inkdropapp/default-dark-ui.git"
+    "url": "git+https://github.com/dgavrilov/tokyo-night-dark-ui.git"
   },
-  "author": "Takuya Matsuyama<t@inkdrop.app>",
+  "author": "Dmitry Gavrilov <dmitry@gavrilov.me>",
   "license": "MIT",
   "devDependencies": {
-    "@inkdropapp/theme-dev-helpers": "^0.3.6"
+    "@inkdropapp/theme-dev-helpers": "^0.3.7"
   },
   "engines": {
     "inkdrop": "^5.9.0"
