--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "default-dark-ui",
-  "version": "2.1.0",
+  "name": "tokyo-night-dark-ui",
+  "version": "0.9.0",
   "theme": "ui",
-  "description": "Default Dark UI Theme for Inkdrop",
+  "description": "Tokyo Night Dark UI theme",
+  "repository": "https://github.com/dgavrilov/tokyo-night-dark-ui",
   "styleSheets": [
     "theme.min.css"
   ],
@@ -14,7 +15,6 @@
     "inkdrop",
     "markdown"
   ],
-  "author": "Takuya Matsuyama<t@inkdrop.app>",
   "license": "MIT",
   "devDependencies": {
     "better-console": "^1.0.1",
