--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tokyo-night-dark-ui",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "theme": "ui",
   "description": "Tokyo Night Dark UI theme",
   "repository": "https://github.com/dgavrilov/tokyo-night-dark-ui",
@@ -39,7 +39,7 @@
     "gulp-print": "^5.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
-    "gulp-rtlcss": "^1.4.2",
+    "gulp-rtlcss": "^2.0.0",
     "gulp-tap": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
@@ -53,6 +53,6 @@
     "Electron 12.0.4"
   ],
   "engines": {
-    "inkdrop": "^5.x"
+    "inkdrop": "^5.8.0"
   }
 }
